// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputMask renders controlled component 1`] = `
<input
  kind="cpf"
  onChange={[Function]}
  value=""
/>
`;

exports[`TextInputMask renders controlled component 2`] = `
<input
  kind="cpf"
  onChange={[Function]}
  value="123.123"
/>
`;

exports[`TextInputMask renders controlled component with initial value 1`] = `
<input
  kind="cpf"
  onChange={[Function]}
  value="223"
/>
`;

exports[`TextInputMask renders uncontrolled component 1`] = `
<input
  kind="cpf"
  onChange={[Function]}
  value="123"
/>
`;
